fix: add back missing ifupdown2 package

--- a/proxmox-datacenter-manager/Dockerfile
+++ b/proxmox-datacenter-manager/Dockerfile
@@ -65,6 +65,7 @@ apt install -y --no-install-recommends \
     bash-completion \
     dbus \
     iproute2 \
+    ifupdown2 \
     iputils-ping \
     sudo \
     wget \
