--- a/pxvirt/Dockerfile
+++ b/pxvirt/Dockerfile
@@ -7,7 +7,7 @@
 # docker build -t pxvirt .
 #
 # Run:
-# docker run -d --name pxvirt-1 --hostname pxvirt-1 \
+# docker run -dit --name pxvirt-1 --hostname pxvirt-1 \
 #     -p 2222:22 -p 3128:3128 -p 8006:8006 \
 #     --restart unless-stopped  \
 #     --privileged --cgroupns=private \
@@ -16,10 +16,8 @@
 #     -v /sys/kernel/security:/sys/kernel/security \
 #     -v ./VM-Backup:/var/lib/vz/dump \
 #     -v ./ISOs:/var/lib/vz/template/iso \
+#     -e PASSWORD=123 \
 #     pxvirt
-#
-# Set root password:
-#    docker exec -it pxvirt-1 passwd
 
 FROM debian:12-slim
 
@@ -135,9 +133,6 @@ EOF
 # Mask unneeded services in container
 RUN <<EOF
 systemctl mask \
-    getty.target \
-    console-getty.service \
-    systemd-firstboot.service \
     systemd-networkd-wait-online.service \
     watchdog-mux.service
 EOF
@@ -324,30 +319,36 @@ EOF
 # Create entrypoint script
 COPY <<'EOF' /entrypoint.sh
 #!/bin/bash
-# Remount cgroup2 as read-write (F docker)
-if mount | grep -q '/sys/fs/cgroup.*ro,'; then
-    umount /sys/fs/cgroup
-    mount -t cgroup2 cgroup2 /sys/fs/cgroup -o rw,nosuid,nodev,noexec
+# Remount these as read-write (F docker)
+mount -o remount,rw /sys/fs/cgroup 2>/dev/null
+mount -o remount,rw /proc/sys 2>/dev/null
+mount -o remount,rw /sys 2>/dev/null
+
+# Set root password
+if [ -n "$PASSWORD" ]; then
+    echo "root:$PASSWORD" | chpasswd
 fi
 
-# Boot systemd init 
-exec /sbin/init
+exec "$@"
 EOF
 RUN chmod +x /entrypoint.sh
+
+# Run with custom entrypoint script
+ENTRYPOINT ["/entrypoint.sh"]
+
+# Default command to systemd init
+CMD ["/sbin/init", "--log-target=console", "--log-level=info"]
 
 # Set working dir
 WORKDIR "/root"
 
-# Expose Pxvirt GUI, SPICE proxy, and SSH
+# Expose Proxmox VE GUI, SPICE proxy, and SSH
 EXPOSE 8006/tcp
 EXPOSE 3128/tcp
 EXPOSE 22/tcp
 
 # Shutdown gracefully
 STOPSIGNAL SIGRTMIN+3
-
-# Run with entrypoint script
-ENTRYPOINT ["/entrypoint.sh"]
 
 # Labels & Annotations
 LABEL maintainer="LongQT-sea <long025733@gmail.com>"
