ref: replace --privileged with granular capabilities for pxvirt

--- a/pxvirt/Dockerfile
+++ b/pxvirt/Dockerfile
@@ -10,8 +10,13 @@
 # docker run -dit --name pxvirt-1 --hostname pxvirt-1 \
 #     -p 2222:22 -p 3128:3128 -p 8006:8006 \
 #     --restart unless-stopped  \
-#     --privileged --cgroupns=private \
-#     --device /dev/kvm \
+#     --cgroupns=private \
+#     --security-opt seccomp=profile.json \
+#     --device-cgroup-rule='a *:* rwm' \
+#     --cap-add=SYS_ADMIN \
+#     --cap-add=NET_ADMIN \
+#     --cap-add=SYS_MODULE \
+#     --cap-add=IPC_LOCK \
 #     -v /usr/lib/modules:/usr/lib/modules:ro \
 #     -v /sys/kernel/security:/sys/kernel/security \
 #     -v ./VM-Backup:/var/lib/vz/dump \
@@ -299,7 +304,7 @@ cat > /etc/rc.local <<'EOF1'
 #!/bin/bash
 # Add loop devices for LXC
 modprobe loop
-for i in $(seq 0 50); do
+for i in $(seq 0 30); do
   if [ ! -e /dev/loop$i ]; then
     mknod -m 0660 /dev/loop$i b 7 $i
   fi
@@ -323,6 +328,27 @@ COPY <<'EOF' /entrypoint.sh
 mount -o remount,rw /sys/fs/cgroup 2>/dev/null
 mount -o remount,rw /proc/sys 2>/dev/null
 mount -o remount,rw /sys 2>/dev/null
+
+# Prevent container from messing with the host DE
+mount -t tmpfs -o ro,noexec,nosuid tmpfs /sys/class/drm
+
+# Set shm size to 1G to prevent cluster joining issue
+mount -o remount,size=1G /dev/shm
+
+# Add device nodes needed by PVE
+mkdir -p /dev/net /dev/mapper
+mknod /dev/kvm            c 10 232
+mknod /dev/fuse           c 10 229
+mknod /dev/zfs            c 10 249
+mknod /dev/net/tun        c 10 200
+mknod /dev/vhost-net      c 10 238
+mknod /dev/loop-control   c 10 237
+mknod /dev/mapper/control c 10 236
+chown root:kvm  /dev/kvm /dev/vhost-net
+chown root:disk /dev/loop-control
+chmod 666 /dev/kvm /dev/zfs /dev/vhost-net
+chmod 660 /dev/loop-control
+chmod 600 /dev/mapper/control
 
 # Set root password
 if [ -n "$PASSWORD" ]; then
