feat: add date tags for scheduled builds
This is for scheduled and manual workflow runs to prevent overwriting the 'latest' tag.

--- a/proxmox-datacenter-manager/Dockerfile
+++ b/proxmox-datacenter-manager/Dockerfile
@@ -67,6 +67,7 @@ apt install -y --no-install-recommends \
     ifupdown2 \
     bridge-utils \
     iputils-ping \
+    isc-dhcp-client \
     sudo \
     wget \
     locales \
