--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,6 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Generate date tag
-        id: date
-        run: echo "date=$(date +'%d.%m.%Y')" >> $GITHUB_OUTPUT
-
       - name: Extract metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
@@ -53,7 +49,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=${{ steps.date.outputs.date }},enable=${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
+            type=schedule,pattern={{date 'YYYY-MM-DD'}}
 
       - name: Build and push
         uses: docker/build-push-action@v6
